feat(scaffold): A better starting point
The first task, RE-001, I would like the minimums
to be a 'quick win' - so after implementing myself
I ran into FK and Serialization issues, which will
need to be dealt with but I've provided
some more meat on the bones to help at least
for the first task

--- a/backlog/RE-002.md
+++ b/backlog/RE-002.md
@@ -5,6 +5,6 @@ Staff must be able to check in Guests.
 - Staff must be able to view bookings.
 - Staff must be able to check the guest in, marking the room as currently occupied.
 - Access must be restricted to only Staff with an Access Code.
-  - Simple shared access code/password is for simplicity and time, - feel free to propose more sophisticated authentication.
+  - Simple shared access code/password is for simplicity and time, feel free to propose more sophisticated authentication.
 - Staff should be able to search and/or find bookings for rooms, for today quickly and easily, for check-in and check-out.
 - Staff should be able to find guests by email for upcoming bookings so they can send emails of upcoming stays.
