feat(backlog): Rework backlog

--- a/backlog/RE-001.md
+++ b/backlog/RE-001.md
@@ -2,11 +2,11 @@
 
 Guests must be able to book a room with their email and a given date range.
 
-- The app must display informative error messages if:
+- The app must display an informative error messages if:
   - The guest provides an invalid email
   - The guest provides an impossible date (end before start, or a stay in the past)
   - The guest attempts a stay for more than a month
-- Guests must be able to view all their bookings
+- Guests should be able to view all their bookings
   - Should be able to highlight current bookings
   - Should be able to filter by date
 - Rooms should not be double booked
