--- a/backlog/RE-003.md
+++ b/backlog/RE-003.md
@@ -1,6 +1,8 @@
 ## Houskeeping
 
-Staff must be able to mark rooms as dirty during checkout
+Staff must be able to mark rooms as dirty during checkout.
 
+- Staff must be able to mark a room as dirty.
 - Staff must be able to mark a room as clean.
 - Staff should not be able to check in a guest to a dirty room.
+- Staff should be able to mark an entire floor as clean.
