--- a/backlog/RE-004.md
+++ b/backlog/RE-004.md
@@ -1,9 +1,8 @@
-## Room Service
+## Room Import
 
-Guests must be able to order room service from the app during their stay.
+Staff must be able to import a CSV of rooms that get processed and imported into their database.
 
-- Room Service must only be available to a checked in reservation to the guest who checked in.
-  - Staff could set the passcode on the reservation during check in, and share it with the guest in person and over email.
-- Guests should be able to order multiple times during their stay, and be able to order multiple items in one order.
-- Guests should order our signature steak.
-- Guests must not be able to order without an active, checked in reservation.
+- The system should handle up to a 200 room import.
+- The system should remain responsive during import.
+- The system should have a UI for drag-n-drop file support.
+- The system should be able to import other entities.
