--- a/backlog/RE-005.md
+++ b/backlog/RE-005.md
@@ -1,11 +1,14 @@
-## Maintenance Requests
+## Featured Room
 
-Guests or Staff must be able to input maintenance requests.
+Currently our rooms have our standard picture (see ./ui/public/bed.png), but guests seeing
+our rooms should see specific pictures and highlights.
 
-- Submission for maintenance can be done either by Staff or Guest.
-- There should be the option to upload a picture.
-- There must be a way for Staff to manage maintenance requests
-  - Staff must be able to see what rooms have maintenance requests.
-  - Staff must be able to mark maintenance requests as completed.
-- There should be a quick way to see if a maintenance request is open for a room currently occupied or one that has a reservation within a week, as these need to be prioritized and dealt with before check in.
-  - A guest cannot be checked in to a room in maintenance.
+Guests should see a featured room with a unique picture when booking.
+
+- The system must support rooms having a unique picture
+- The system must support a room being marked as featured
+- The UI must show a featured room in a new hero section on the booking screen
+- Staff should be able to manage rooms and their pictures
+- Staff should be able to select a room to feature
+- The system should support adding a list of amenities to a room
+- The UI should highlight a list of amenities in an eye-catching way
