feat(backlog): Reduce scope

--- a/backlog/RE-001.md
+++ b/backlog/RE-001.md
@@ -1,12 +1,10 @@
 ## Guest Booking
 
-Guests must be able to book a room with their email and a given date range.
+Allow Guests to book a room.
 
-- The app must display an informative error messages if:
-  - The guest provides an invalid email
-  - The guest provides an impossible date (end before start, or a stay in the past)
-  - The guest attempts a stay for more than a month
-- Guests should be able to view all their bookings
-  - Should be able to highlight current bookings
-  - Should be able to filter by date
-- Rooms should not be double booked
+- A booking requires a Start Date, an End Date, an Email, and Room Number
+  - Start Date must be before the End Date
+  - The Duration has a minimum of 1 day
+  - Maximum Duration of 30 days
+  - Email must include a domain
+  - Room Number must be a valid, existing room
