--- a/backlog/RE-003.md
+++ b/backlog/RE-003.md
@@ -1,8 +1,7 @@
-## Houskeeping
+## Staff Login
 
-Staff must be able to mark rooms as dirty during checkout.
+Staff can log in to view Reservations
 
-- Staff must be able to mark a room as dirty.
-- Staff must be able to mark a room as clean.
-- Staff should not be able to check in a guest to a dirty room.
-- Staff should be able to mark an entire floor as clean.
+- Authenticate Staff with a shared Acess Code
+- View all reservations that are for today or in the future.
+- Show Guest details in a reservation (Email)
