--- a/backlog/RE-004.md
+++ b/backlog/RE-004.md
@@ -1,8 +1,9 @@
-## Room Import
+## Check In
 
-Staff must be able to import a CSV of rooms that get processed and imported into their database.
+Staff can Check In Guests
 
-- The system should handle up to a 200 room import.
-- The system should remain responsive during import.
-- The system should have a UI for drag-n-drop file support.
-- The system should be able to import other entities.
+- When viewing a Reservation, be able to Check In a reservation for today
+  - Staff need to be able to click Check In for any reservation listed for today
+  - Staff can easily filter the list of reservations to only see Today's reservations
+- Check in requires email confirmation
+- Check in marks the room as occupied
