--- a/backlog/RE-005.md
+++ b/backlog/RE-005.md
@@ -1,14 +1,7 @@
-## Featured Room
+## Import
 
-Currently our rooms have our standard picture (see ./ui/public/bed.png), but guests seeing
-our rooms should see specific pictures and highlights.
+Staff can import a list of rooms via a CSV file
 
-Guests should see a featured room with a unique picture when booking.
-
-- The system must support rooms having a unique picture
-- The system must support a room being marked as featured
-- The UI must show a featured room in a new hero section on the booking screen
-- Staff should be able to manage rooms and their pictures
-- Staff should be able to select a room to feature
-- The system should support adding a list of amenities to a room
-- The UI should highlight a list of amenities in an eye-catching way
+- Handle up to 500 rooms
+- Validate each line item and return a list of errors
+- Bonus points for a Drag-and-Drop UI
