--- a/backlog/RE-006.md
+++ b/backlog/RE-006.md
@@ -1,12 +1,6 @@
-## Maintenance Requests
+## Housekeeping
 
-Guests or Staff must be able to input maintenance requests.
+Staff must be able to mark a room as clean or dirty
 
-- Submission for maintenance can be done either by Staff or Guest.
-- Guests/Staff should be able to upload a picture.
-- There must be a way for Staff to manage maintenance requests
-  - Staff must be able to see what rooms have maintenance requests.
-  - Staff must be able to mark maintenance requests as completed.
-  - Guests must not be able to mark requests as completed.
-- There should be a quick way to see if a maintenance request is open for a room currently occupied or one that has a reservation within a week, as these need to be prioritized and dealt with before check in.
-  - A guest cannot be checked in to a room in maintenance.
+- Check in automatically marks the room as dirty
+- Staff cannot check in a guest to a dirty room
