--- a/backlog/RE-002.md
+++ b/backlog/RE-002.md
@@ -1,13 +1,6 @@
-## Staff Check Ins
+## Booking Validations
 
-Staff must be able to check in Guests.
+Prevent double bookings
 
-- Staff must be able to view bookings.
-- Staff must be able to check guests in, marking the room as currently occupied.
-- Access must be restricted to only Staff with an Access Code.
-  - Simple shared access code is for simplicity and time, feel free to propose more sophisticated authentication,
-    an implementation of this has been provided in `/staff/login` and `/staff/check`.
-- Staff should be able to search and/or find bookings by rooms, by a 'today' quick filter, so that staff can
-  efficiently check-in and check-out guests.
-- Staff should be able to find guests by email for upcoming bookings so they can send emails of upcoming stays
-  for upsell opportunities and building rapport and long term relationships with guests.
+- Guests should not be able to double book a room if there is a conflict
+  - A potential reservation conflicts with an existing reservation if any part of either reservation's duration overlap for the same room
