fix(backlog): Detail room number format

--- a/backlog/RE-001.md
+++ b/backlog/RE-001.md
@@ -7,4 +7,31 @@ Allow Guests to book a room.
   - The Duration has a minimum of 1 day
   - Maximum Duration of 30 days
   - Email must include a domain
-  - Room Number must be a valid, existing room
+  - Room Number must be a valid, existing room (see below rules on a Room Number)
+
+```
+Examples of valid room numbers:
+  101
+  102
+  103
+  104
+  105
+  201
+  202
+  203
+
+Room Numbers must be a string composed of three digits from 0-9 in the format "###".
+The first digit is the floor number of the building (0 - ground floor, 1st floor, 2nd floor.... 9th floor).
+The second and third make up the door number shown on the door in the hotel floor.
+There cannot be any underground (ie negative) floors.
+There cannot be more than 9 floors.
+There cannot be a '00' door on any floor.
+
+Examples of invalid room numbers:
+  -101
+  100
+  0
+  1
+  2020
+  000
+```
